--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: cornsilk;
+  background-color: white;
 }
 
 .nav {
@@ -59,7 +59,7 @@ a {
   width: 35rem;
   border-radius: 15px;
   background: grey;
-  box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+  box-shadow: 20px 20px 60px #9d9d9d, -20px -20px 60px #ffffff;
   margin-top: 2.5rem;
   height: 20.6rem;
   display: flex;
@@ -188,4 +188,39 @@ a {
 .cast-img{
   border-radius: 15px;
   width: 90%;
+}
+
+@media screen and (max-width: 1150px) {
+  .movieCont {
+    grid-template-columns: auto;
+    justify-content: space-around;
+  }
+  .container img{
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .card{
+    width: 25rem;
+  }
+  .img-cont img{
+    aspect-ratio: 8/15;
+  }
+  .container{
+    flex-direction: column;
+  }
+  .container img{
+    width: 100%;
+  }
+  .info-container h1{
+    font-size: 2rem;
+  }
+  .info-container{
+    margin-left: 0;
+    font-size: 1.2rem;
+  }
+  .cast-grid{
+    grid-template-columns: auto  auto;
+  }
 }
